--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "formatter": { "indentStyle": "space" },
+  "formatter": { "indentStyle": "space", "lineWidth": 100 },
   "linter": {
     "enabled": true,
     "rules": {
