--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/devtools": "^4.3.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.6.0",
+    "modern-normalize": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
