--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@hookform/devtools": "^4.3.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.6.0",
+    "autoprefixer": "^10.4.19",
     "modern-normalize": "^2.0.0",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "tailwindcss": "^3.4.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
