--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,8 +3,9 @@
   "singleQuote": true,
   "overrides": [
     {
-          "files": ["*.json"],
-          "options": { "tabWidth": 2 }
-      }
-  ]
+      "files": ["*.json"],
+      "options": { "tabWidth": 2 }
+    }
+  ],
+  "printWidth": 100
 }
